force-app/main/default/objects/Bus_Seat__c/Bus_Seat__c.object-meta.xml
<CustomObject>
    <label>Bus Seat</label>
    <nameField>
        <label>Bus Seat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>