force-app/main/default/objects/Bus_Seat__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <description>Master-detail  to the parent bus</description>
    <inlineHelpText>Each Bus has 40 seats.</inlineHelpText>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Bus Seats</relationshipLabel>
    <relationshipName>Bus_Seats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>