force-app/main/default/objects/Bus_Seat__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <description>Row Number</description>
    <formula>IF(Row_Number__c &lt;= 3, &quot;Premium&quot;, &quot;Standard&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Row Number per seat.</inlineHelpText>
    <label>Class Type</label>
    <type>Text</type>
</CustomField>