force-app/main/default/objects/Bus_Seat__c/fields/Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>Is_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Booked</description>
    <inlineHelpText>Is the seat booked?</inlineHelpText>
    <label>Is Booked</label>
    <type>Checkbox</type>
</CustomField>