force-app/main/default/objects/Bus_Seat__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <description>Row Number</description>
    <inlineHelpText>Row Number for seats</inlineHelpText>
    <label>Row Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>