force-app/main/default/objects/Bus_Seat__c/fields/Seat_Letter__c.field-meta.xml
<CustomField>
    <fullName>Seat_Letter__c</fullName>
    <description>Seat Letter</description>
    <inlineHelpText>Seat Letters A - D</inlineHelpText>
    <label>Seat Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>